Fixed adding dark mode onto the nav bar

--- a/static/style.css
+++ b/static/style.css
@@ -292,14 +292,17 @@ a {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    background-color: #333;
+    width: 100%; 
+    background-color: #FFD700;
     color: white;
     z-index: 1000; /* Ensures the navbar is above other elements */
     padding: 1.3rem 0;
     display: flex;
     align-items: center;
     gap: 1rem;
+} 
+.navbar.dark-mode {
+    background-color: #333;
 }
 
 .navbar a, .navbar i {
